chore(tests): run jest with --runInBand in CI (#38)
* chore(tests): run jest with --runInBand in CI

I heard a few times that this makes the tests faster on Travis, so let's give it a try

* test without runInBand

* Revert "test without runInBand"

This reverts commit 61309dcd87698db07d52758603fee42be9a22287.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "release": "./scripts/release.sh",
     "lint": "if [ \"$CI\" = \"true\" ]; then eslint .; else eslint . --cache; fi",
     "docs:doctoc": "doctoc --maxlevel 1 README.md",
-    "test": "jest && yarn lint && NODE_ENV=production yarn test:build",
+    "test": "./scripts/test.sh",
     "test:build": "./scripts/test:build.sh",
     "dev": "jest --watch --bail",
     "docs:storybook-start": "NODE_ENV=development start-storybook -p 6006 -c ./storybook -s ./storybook/public",
