--- a/packages/react-instantsearch/examples/react-native/package.json
+++ b/packages/react-instantsearch/examples/react-native/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "react": "^15.4.2",
-    "react-instantsearch": "latest",
-    "react-native": "^0.41.2"
+    "prop-types": "^15.5.8",
+    "react": "^15.5.4",
+    "react-instantsearch": "beta",
+    "react-native": "^0.42.0"
   },
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start"
