docs(Autocomplete): add @mentions to possible use of Autocomplete  (#76)
* remove old Hits And Facets example
* docs(Autocomplete): add mentions to possible use of Autocomplete

fixes #71

Same dataset as the [guide](https://www.algolia.com/doc/guides/search/autocomplete-textarea/) that uses the helper etc.

![]()

* update readme

--- a/packages/react-instantsearch/examples/autocomplete/package.json
+++ b/packages/react-instantsearch/examples/autocomplete/package.json
@@ -4,6 +4,7 @@
     "react-scripts": "^0.9.2"
   },
   "dependencies": {
+    "antd": "^2.9.3",
     "lodash": "^4.16.6",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
