chore(build system): make es2015 modules available (#81)
After spending a few hours and trying a few options this is the needed solution:

1. add three BABEL_ENV cases
  1. develop: same as before
  2. commonjs: same, but with `babili` added
  3. es: same, but with `babili` and `modules: false`

  I tried a *lot* of things, and this is the only order of things that made it work to me, but at least it worked!

2. edit two node scripts that aren't being babelified anymore (simpler in this case, let's wait until it's supported on node)
3. add /dist/es/ with es module build
  - also mark that build as the `module` in package.json

This will give the same experience for everyone using webpack 1 or browserify, but will have tree shaking for webpack 2 and rollup

* fix some things

* simplify theme build

* eslint

* make tests pass locally

* fix directory

* fix review comments

* add comments

--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,42 @@
 {
-  "presets": [
-    ["env", { "targets": { "browsers": ["last 2 versions", "ie >= 9"] } }],
-    "react",
-    "stage-2"
-  ],
   "plugins": ["lodash", "inline-json-import"],
   "env": {
+    // used for storybooks and regular build
     "development": {
+      "presets": [
+        ["env", { "targets": { "browsers": ["last 2 versions", "ie >= 9"] } }],
+        "react",
+        "stage-2"
+      ],
       "plugins": [
         "transform-react-jsx-source",
         "react-hot-loader/babel"
+      ]
+    },
+    // used for (require();) builds and node
+    "commonjs": {
+      "presets": [
+        ["env", { "targets": { "browsers": ["last 2 versions", "ie >= 9"] } }],
+        "react",
+        "stage-2",
+        "babili"
+      ]
+    },
+    // jest sets node env so we can't use `development`
+    "test": {
+      "presets": [
+        ["env", { "targets": { "browsers": ["last 2 versions", "ie >= 9"] } }],
+        "react",
+        "stage-2"
+      ]
+    },
+    // used for es2015 modules build (import; export;)
+    "es": {
+      "presets": [
+        ["env", { "targets": { "browsers": ["last 2 versions", "ie >= 9"] }, "modules": false }],
+        "react",
+        "stage-2",
+        "babili"
       ]
     }
   }
