--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "upgrade-deps": "./scripts/upgrade-deps.sh",
     "changelog": "conventional-changelog --preset angular --output-unreleased",
     "start": "NODE_ENV=development babel-node docgen/start.js & yarn docs:storybook-start & wait",
-    "docs:build": "babel-node docgen/build.js && yarn docs:storybook-build-production",
-    "docs:deploy-production": "NODE_ENV=production yarn docs:build && babel-node scripts/gh-pages.js",
+    "docs:build": "BABEL_ENV=commonjs babel-node docgen/build.js && BABEL_ENV=commonjs  yarn docs:storybook-build-production",
+    "docs:deploy-production": "NODE_ENV=production yarn docs:build && BABEL_ENV=commonjs babel-node scripts/gh-pages.js",
     "docs:build-preview": "./scripts/docs:build-preview.sh",
     "docs:deploy-preview": "yarn docs:build-preview && rm -f preview.zip && zip -r -9 preview.zip docs-production/ && netlify deploy && rm preview.zip",
     "release": "./scripts/release.sh",
@@ -45,6 +45,7 @@
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-transform-react-jsx-source": "^6.22.0",
     "babel-polyfill": "^6.23.0",
+    "babel-preset-babili": "^0.0.12",
     "babel-preset-env": "^1.2.1",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
