--- a/packages/react-instantsearch-theme-algolia/package.json
+++ b/packages/react-instantsearch-theme-algolia/package.json
@@ -9,7 +9,7 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "babel-node scripts/build.js",
+    "build": "node scripts/build.js",
     "build-and-publish": "./scripts/build-and-publish.sh"
   },
   "devDependencies": {
