--- a/packages/react-instantsearch/package.json
+++ b/packages/react-instantsearch/package.json
@@ -4,6 +4,8 @@
     "name": "Algolia, Inc.",
     "url": "https://www.algolia.com"
   },
+  "main": "index.js",
+  "module": "es/index.js",
   "description": "⚡ Lightning-fast search for React and React Native apps",
   "version": "4.0.0-beta.5",
   "scripts": {
