chore(dev): ensure Node.js version is 7.10.0 (#110)
Node.js v8 is just out and travis is using it. But it's so new it
breaks.

Always better to just pin the version completely and avoid those errors.

--- a/package.json
+++ b/package.json
@@ -120,7 +120,7 @@
     "webpack-hot-middleware": "^2.17.1"
   },
   "engines": {
-    "node": "^6.x.x || ^7.x.x"
+    "node": "7.10.0"
   },
   "jest": {
     "notify": false
