docs(cloudinary): Use https link for Cloudinary images (#115)
* docs(cloudinary): Use https link for Cloudinary images

The website was loading Cloudinary assets using and http protocol,
resulting in Mixed-Content warning and images not displayed.

* docs(https): fix typo

--- a/docgen/assets/data/community-projects.json
+++ b/docgen/assets/data/community-projects.json
@@ -32,7 +32,7 @@
 	{
 		"name":"magento",
 		"url":"https://community.algolia.com/magento/",
-		"logo":"http://res.cloudinary.com/hilnmyskv/image/upload/v1477318624/magento-icon-white.svg",
+		"logo":"https://res.cloudinary.com/hilnmyskv/image/upload/v1477318624/magento-icon-white.svg",
 		"backgroundColor": "linear-gradient(to bottom right, #ed9259, #e76d22)"
 	}
 ]
