--- a/packages/react-instantsearch/examples/react-native/package.json
+++ b/packages/react-instantsearch/examples/react-native/package.json
@@ -1,17 +1,36 @@
 {
-  "name": "reactnative",
-  "version": "0.0.1",
+  "name": "ReactInstantSearch",
+  "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "prop-types": "^15.5.8",
-    "react": "^15.5.4",
-    "react-instantsearch": "beta",
-    "react-native": "^0.42.0"
-  },
-  "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start"
-  },
   "devDependencies": {
-    "babel-preset-react-native": "^1.9.1"
+    "jest-expo": "~1.0.1",
+    "react-native-scripts": "0.0.31",
+    "react-test-renderer": "16.0.0-alpha.6"
+  },
+  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
+  "scripts": {
+    "start": "react-native-scripts start",
+    "eject": "react-native-scripts eject",
+    "android": "react-native-scripts android",
+    "ios": "react-native-scripts ios",
+    "test": "node node_modules/jest/bin/jest.js --watch"
+  },
+  "jest": {
+    "preset": "jest-expo"
+  },
+  "dependencies": {
+    "expo": "^17.0.0",
+    "react": "16.0.0-alpha.6",
+    "react-native": "^0.44.0",
+    "@ptomasroos/react-native-multi-slider": "^0.0.8",
+    "lodash": "^4.17.4",
+    "native-base": "^2.1.3",
+    "prop-types": "^15.5.8",
+    "react-dom": "16.0.0-alpha.6",
+    "react-instantsearch": "beta",
+    "react-native-modal-dropdown": "^0.4.2",
+    "react-native-router-flux": "^3.39.2",
+    "react-native-star-rating": "^1.0.7",
+    "react-native-vector-icons": "^4.0.1"
   }
 }
