chore: update deps (#129)
* chore: update storybook deps

* update: async

* chore: update react

* chore: update babel dep

* chore: update test dep

* chore: update prop types

* update: example dependencies

* chore: update style dep

* chore:update webpack

* chore: update deps

* chore: update babel-cli

* update: material-ui dep

* chore: update react-hot-loader

* fix: update eslint dependencies

--- a/package.json
+++ b/package.json
@@ -28,96 +28,96 @@
     ]
   },
   "dependencies": {
-    "async": "^2.1.5",
-    "autoprefixer": "^6.7.5",
-    "babel-cli": "^6.23.0",
-    "babel-core": "^6.23.1",
-    "babel-eslint": "^7.2.1",
-    "babel-jest": "^19.0.0",
-    "babel-loader": "^6.3.2",
-    "babel-plugin-inline-json-import": "^0.2.0",
+    "@storybook/addon-actions": "^3.1.2",
+    "@storybook/addon-knobs": "^3.1.2",
+    "@storybook/addon-options": "^3.1.2",
+    "@storybook/addons": "^3.1.2",
+    "@storybook/react": "^3.1.3",
+    "@storybook/ui": "^3.1.3",
+    "async": "^2.4.1",
+    "autoprefixer": "^7.1.1",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
+    "babel-eslint": "^7.2.3",
+    "babel-jest": "^20.0.3",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-inline-json-import": "^0.2.1",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-transform-react-jsx-source": "^6.22.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-babili": "^0.0.12",
-    "babel-preset-env": "^1.2.1",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-2": "^6.22.0",
-    "browser-sync": "^2.18.8",
-    "chokidar": "^1.6.1",
-    "clipboard": "^1.6.0",
-    "codemirror": "^5.24.2",
+    "babel-preset-env": "^1.5.2",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "browser-sync": "^2.18.12",
+    "chokidar": "^1.7.0",
+    "clipboard": "^1.7.1",
+    "codemirror": "^5.26.0",
     "collect-json": "^1.0.8",
     "compression": "^1.6.2",
-    "conventional-changelog-cli": "^1.2.0",
-    "css-loader": "^0.26.2",
-    "doctoc": "^1.2.0",
+    "conventional-changelog-cli": "^1.3.1",
+    "css-loader": "^0.28.4",
+    "doctoc": "^1.3.0",
     "escape-html": "^1.0.3",
-    "eslint": "^3.19.0",
+    "eslint": "^4.0.0",
     "eslint-config-algolia": "^7.0.3",
     "eslint-config-prettier": "^1.5.0",
     "eslint-import-resolver-webpack": "^0.8.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jasmine": "^2.1.0",
-    "eslint-plugin-jest": "^19.0.1",
-    "eslint-plugin-react": "^6.10.3",
-    "gh-pages": "^0.12.0",
-    "glob": "^7.1.1",
-    "google-map-react": "^0.22.3",
-    "happypack": "^3.0.3",
-    "hasha": "^2.2.0",
-    "husky": "^0.13.3",
-    "jest-cli": "^19.0.2",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jasmine": "^2.3.0",
+    "eslint-plugin-jest": "^20.0.3",
+    "eslint-plugin-react": "^7.1.0",
+    "gh-pages": "^1.0.0",
+    "glob": "^7.1.2",
+    "google-map-react": "^0.24.0",
+    "happypack": "^4.0.0-beta.1",
+    "hasha": "^3.0.0",
+    "husky": "^0.13.4",
+    "jest-cli": "^20.0.4",
     "jsdoc-parse": "^1.2.7",
-    "json": "^9.0.4",
+    "json": "^9.0.6",
     "jstransformer-markdown-it": "^2.0.0",
-    "lint-staged": "^3.4.0",
+    "lint-staged": "^3.6.1",
     "lodash": "^4.17.4",
-    "markdown-it": "^8.3.0",
+    "markdown-it": "^8.3.1",
     "markdown-it-anchor": "^4.0.0",
-    "material-ui": "^0.17.0",
+    "material-ui": "^0.18.3",
     "metalsmith": "^2.3.0",
     "metalsmith-headings": "^0.1.0",
-    "metalsmith-layouts": "^1.8.0",
+    "metalsmith-layouts": "^1.8.1",
     "metalsmith-navigation": "^0.2.9",
     "metalsmith-sass": "^1.4.0",
     "ms-webpack": "^2.0.0-alpha.1",
     "mversion": "^1.10.1",
-    "netlify-cli": "^1.1.0",
-    "node-sass": "^4.5.0",
-    "npm-check": "^5.4.0",
-    "postcss": "^5.2.15",
-    "postcss-loader": "^1.3.2",
-    "postcss-scss": "^0.4.1",
+    "netlify-cli": "^1.2.2",
+    "node-sass": "^4.5.3",
+    "npm-check": "^5.4.4",
+    "postcss": "^6.0.2",
+    "postcss-loader": "^2.0.6",
+    "postcss-scss": "^1.0.1",
     "prettier": "^1.2.2",
     "pretty-bytes-cli": "^2.0.0",
-    "prop-types": "^15.5.8",
-    "pug": "^2.0.0-beta11",
-    "qs": "^6.3.1",
-    "react": "^15.5.4",
-    "react-addons-test-utils": "^15.4.2",
-    "react-autosuggest": "^8.0.1",
-    "react-dom": "^15.5.4",
-    "react-hot-loader": "^3.0.0-beta.4",
+    "prop-types": "^15.5.10",
+    "pug": "^2.0.0-rc.2",
+    "qs": "^6.4.0",
+    "react": "^15.6.1",
+    "react-addons-test-utils": "^15.6.0",
+    "react-autosuggest": "^9.1.0",
+    "react-dom": "^15.6.1",
+    "react-hot-loader": "^3.0.0-beta.7",
     "react-tap-event-plugin": "^2.0.1",
-    "recursive-readdir": "^2.1.1",
+    "recursive-readdir": "^2.2.1",
     "replace-in-file": "^2.5.0",
     "rheostat": "^2.1.0",
-    "sass-loader": "^6.0.2",
+    "sass-loader": "^6.0.6",
     "stat-mode": "^0.2.2",
-    "@storybook/react": "3.0.0",
-    "@storybook/ui": "3.0.0",
-    "@storybook/addons": "3.0.0",
-    "@storybook/addon-knobs": "3.0.0",
-    "@storybook/addon-options": "3.0.0",
-    "@storybook/addon-actions": "3.0.0",
     "string": "^3.3.3",
-    "style-loader": "^0.13.2",
+    "style-loader": "^0.18.2",
     "uglify-js": "^2.7.5",
-    "webpack": "^2.2.1",
-    "webpack-bundle-analyzer": "^2.3.0",
-    "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.17.1"
+    "webpack": "^2.6.1",
+    "webpack-bundle-analyzer": "^2.8.2",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-hot-middleware": "^2.18.0"
   },
   "engines": {
     "node": "7.10.0"
