tests(visual): add Argos CI (#130)

--- a/.eslintignore
+++ b/.eslintignore
@@ -5,3 +5,6 @@ packages/react-instantsearch/examples/*/node_modules/
 docs/
 docs-production/
 dist/
+
+# Happo visual regression build
+test/.happo
