--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "docs:doctoc": "doctoc --maxlevel 1 README.md",
     "test": "./scripts/test.sh",
     "test:build": "./scripts/test:build.sh",
+    "test:regressions": "webpack --config test/regressions/webpack.config.js && rm -rf test/screenshots && happo run && babel-node ./test/regressions/normalize.js",
+    "argos": "argos upload test/screenshots --token $ARGOS_TOKEN || true",
     "dev": "jest --watch --bail",
     "docs:storybook-start": "NODE_ENV=development start-storybook -p 6006 -c ./storybook -s ./storybook/public",
     "docs:storybook-build-production": "NODE_ENV=development build-storybook -s ./storybook/public -o docs-production/react-instantsearch/storybook -c ./storybook",
@@ -34,6 +36,7 @@
     "@storybook/addons": "^3.1.2",
     "@storybook/react": "^3.1.3",
     "@storybook/ui": "^3.1.3",
+    "argos-cli": "^0.0.8",
     "async": "^2.4.1",
     "autoprefixer": "^7.1.1",
     "babel-cli": "^6.24.1",
@@ -67,9 +70,13 @@
     "eslint-plugin-jasmine": "^2.3.0",
     "eslint-plugin-jest": "^20.0.3",
     "eslint-plugin-react": "^7.1.0",
+    "fs-extra": "^3.0.1",
     "gh-pages": "^1.0.0",
     "glob": "^7.1.2",
     "google-map-react": "^0.24.0",
+    "happo": "^5.0.0-rc.3",
+    "happo-core": "^5.0.0-rc.2",
+    "happo-target-firefox": "^5.0.0-rc.6",
     "happypack": "^4.0.0-beta.1",
     "hasha": "^3.0.0",
     "husky": "^0.13.4",
