--- a/packages/react-instantsearch/package.json
+++ b/packages/react-instantsearch/package.json
@@ -7,7 +7,7 @@
   "main": "index.js",
   "module": "es/index.js",
   "description": "⚡ Lightning-fast search for React and React Native apps",
-  "version": "4.0.7",
+  "version": "4.1.0-beta.0",
   "scripts": {
     "build": "./scripts/build.sh",
     "build-and-publish": "./scripts/build-and-publish.sh"
