--- a/packages/react-instantsearch/examples/next-app/package.json
+++ b/packages/react-instantsearch/examples/next-app/package.json
@@ -2,12 +2,12 @@
   "name": "create-next-example-app",
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "build": "NODE_ENV=development next build",
     "start": "next start"
   },
   "dependencies": {
     "css-loader": "^0.28.1",
-    "next": "^2.4.1",
+    "next": "^2.4.7",
     "prop-types": "^15.5.10",
     "qs": "^6.4.0",
     "react": "^15.5.4",
