docs(description): add "by Algolia" to the package.json description (#176)
This will make it more prominent when searched on places like Yarn -- and consistent with the GitHub description

--- a/packages/react-instantsearch/package.json
+++ b/packages/react-instantsearch/package.json
@@ -6,7 +6,7 @@
   },
   "main": "index.js",
   "module": "es/index.js",
-  "description": "⚡ Lightning-fast search for React and React Native apps",
+  "description": "⚡ Lightning-fast search for React and React Native apps, by Algolia",
   "version": "4.1.0-beta.1",
   "scripts": {
     "build": "./scripts/build.sh",
