--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "docs:build-preview": "./scripts/docs:build-preview.sh",
     "docs:deploy-preview": "NODE_ENV=production yarn docs:build-preview && rm -f preview.zip && zip -r -9 preview.zip docs-production/ && netlify deploy && rm preview.zip",
     "release": "NODE_ENV=production ./scripts/release.sh",
-    "lint": "if [ \"$CI\" = \"true\" ]; then eslint .; else eslint . --cache; fi",
-    "reformat": "find . -name '*.js' | grep -v node_modules | xargs prettier --write --single-quote --trailing-comma es5",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "docs:doctoc": "doctoc --maxlevel 1 README.md",
     "test": "./scripts/test.sh",
     "test:build": "NODE_ENV=production ./scripts/test:build.sh",
@@ -20,14 +20,7 @@
     "argos": "argos upload test/screenshots --token $ARGOS_TOKEN || true",
     "dev": "jest --watch --bail",
     "docs:storybook-start": "start-storybook -p 6006 -c ./storybook -s ./storybook/public",
-    "docs:storybook-build-production": "build-storybook -s ./storybook/public -o docs-production/react-instantsearch/storybook -c ./storybook",
-    "precommit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.js": [
-      "prettier --write --single-quote --trailing-comma es5",
-      "git add"
-    ]
+    "docs:storybook-build-production": "build-storybook -s ./storybook/public -o docs-production/react-instantsearch/storybook -c ./storybook"
   },
   "dependencies": {
     "@storybook/addon-actions": "^3.1.9",
@@ -61,13 +54,14 @@
     "css-loader": "^0.28.4",
     "doctoc": "^1.3.0",
     "escape-html": "^1.0.3",
-    "eslint": "^4.2.0",
-    "eslint-config-algolia": "^7.0.3",
-    "eslint-config-prettier": "^1.5.0",
+    "eslint": "^4.3.0",
+    "eslint-config-algolia": "^12.0.0",
+    "eslint-config-prettier": "^2.3.0",
     "eslint-import-resolver-webpack": "^0.8.1",
-    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jasmine": "^2.3.0",
     "eslint-plugin-jest": "^20.0.3",
+    "eslint-plugin-prettier": "^2.1.2",
     "eslint-plugin-react": "^7.1.0",
     "fs-extra": "^4.0.0",
     "gh-pages": "^1.0.0",
@@ -78,12 +72,10 @@
     "happo-target-firefox": "^5.0.0-rc.6",
     "happypack": "^4.0.0-beta.1",
     "hasha": "^3.0.0",
-    "husky": "^0.14.3",
     "jest-cli": "^20.0.4",
     "jsdoc-parse": "^1.2.7",
     "json": "^9.0.6",
     "jstransformer-markdown-it": "^2.0.0",
-    "lint-staged": "^4.0.0",
     "lodash": "^4.17.4",
     "markdown-it": "^8.3.1",
     "markdown-it-anchor": "^4.0.0",
@@ -101,7 +93,7 @@
     "postcss": "^6.0.6",
     "postcss-loader": "^2.0.6",
     "postcss-scss": "^1.0.2",
-    "prettier": "^1.5.2",
+    "prettier": "^1.5.3",
     "pretty-bytes-cli": "^2.0.0",
     "prop-types": "^15.5.10",
     "pug": "^2.0.0-rc.2",
