--- a/packages/react-instantsearch/examples/multi-index/package.json
+++ b/packages/react-instantsearch/examples/multi-index/package.json
@@ -7,7 +7,7 @@
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-instantsearch": "beta",
+    "react-instantsearch": "4.1.0-beta.3",
     "react-instantsearch-theme-algolia": "beta"
   },
   "scripts": {
