--- a/packages/react-instantsearch/examples/react-native/package.json
+++ b/packages/react-instantsearch/examples/react-native/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-test-renderer": "16.0.0-alpha.13",
+    "jest-expo": "19.0.2",
     "react-native-scripts": "1.0.0",
+    "react-test-renderer": "16.0.0-alpha.13",
     "jest-expo": "19.0.2"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -24,9 +25,9 @@
     "lodash": "^4.17.4",
     "native-base": "^2.2.1",
     "prop-types": "^15.5.8",
-    "react-dom": "16.0.0-alpha.13",
     "react": "16.0.0-alpha.13",
-    "react-instantsearch": "beta",
+    "react-dom": "16.0.0-alpha.13",
+    "react-instantsearch": "4.1.0-beta.3",
     "react-native": "^0.46.3",
     "react-native-modal-dropdown": "^0.4.4",
     "react-native-router-flux": "^3.41.0",
