--- a/packages/react-instantsearch/examples/react-native/package.json
+++ b/packages/react-instantsearch/examples/react-native/package.json
@@ -5,8 +5,7 @@
   "devDependencies": {
     "jest-expo": "19.0.2",
     "react-native-scripts": "1.0.0",
-    "react-test-renderer": "16.0.0-alpha.13",
-    "jest-expo": "19.0.2"
+    "react-test-renderer": "16.0.0-alpha.13"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -27,7 +26,7 @@
     "prop-types": "^15.5.8",
     "react": "16.0.0-alpha.13",
     "react-dom": "16.0.0-alpha.13",
-    "react-instantsearch": "4.1.0-beta.3",
+    "react-instantsearch": "4.1.0-beta.4",
     "react-native": "^0.46.3",
     "react-native-modal-dropdown": "^0.4.4",
     "react-native-router-flux": "^3.41.0",
