--- a/packages/react-instantsearch/examples/autocomplete/package.json
+++ b/packages/react-instantsearch/examples/autocomplete/package.json
@@ -10,8 +10,8 @@
     "react": "^15.6.1",
     "react-autosuggest": "^9.3.1",
     "react-dom": "^15.6.1",
-    "react-instantsearch": "4.1.0-beta.4",
-    "react-instantsearch-theme-algolia": "beta"
+    "react-instantsearch": "4.1.0-beta.5",
+    "react-instantsearch-theme-algolia": "4.1.0-beta.5"
   },
   "scripts": {
     "start": "react-scripts start"
