--- a/packages/react-instantsearch/examples/geo-search/package.json
+++ b/packages/react-instantsearch/examples/geo-search/package.json
@@ -9,8 +9,8 @@
     "qs": "^6.5.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-instantsearch": "4.1.0-beta.4",
-    "react-instantsearch-theme-algolia": "beta"
+    "react-instantsearch": "4.1.0-beta.5",
+    "react-instantsearch-theme-algolia": "4.1.0-beta.5"
   },
   "scripts": {
     "start": "react-scripts start"
