--- a/packages/react-instantsearch/examples/multi-index/package.json
+++ b/packages/react-instantsearch/examples/multi-index/package.json
@@ -7,8 +7,8 @@
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-instantsearch": "4.1.0-beta.4",
-    "react-instantsearch-theme-algolia": "beta"
+    "react-instantsearch": "4.1.0-beta.5",
+    "react-instantsearch-theme-algolia": "4.1.0-beta.5"
   },
   "scripts": {
     "start": "react-scripts start"
