--- a/packages/react-instantsearch/examples/react-native/package.json
+++ b/packages/react-instantsearch/examples/react-native/package.json
@@ -26,7 +26,8 @@
     "prop-types": "^15.5.8",
     "react": "16.0.0-alpha.13",
     "react-dom": "16.0.0-alpha.13",
-    "react-instantsearch": "4.1.0-beta.4",
+    "react-instantsearch": "4.1.0-beta.5",
+    "react-instantsearch-theme-algolia": "4.1.0-beta.5",
     "react-native": "^0.46.3",
     "react-native-modal-dropdown": "^0.4.4",
     "react-native-router-flux": "^3.41.0",
