--- a/packages/react-instantsearch/examples/react-router/package.json
+++ b/packages/react-instantsearch/examples/react-router/package.json
@@ -9,8 +9,8 @@
     "qs": "^6.3.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-instantsearch": "4.1.0-beta.4",
-    "react-instantsearch-theme-algolia": "beta",
+    "react-instantsearch": "4.1.0-beta.5",
+    "react-instantsearch-theme-algolia": "4.1.0-beta.5",
     "react-router-dom": "^4.1.2"
   },
   "scripts": {
