--- a/packages/react-instantsearch/examples/server-side-rendering/package.json
+++ b/packages/react-instantsearch/examples/server-side-rendering/package.json
@@ -27,6 +27,7 @@
     "prop-types": "^15.5.10",
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
-    "react-instantsearch": "4.1.0-beta.4"
+    "react-instantsearch": "4.1.0-beta.5",
+    "react-instantsearch-theme-algolia": "4.1.0-beta.5"
   }
 }
