docs(pkg.json): add some keywords (#250)
* docs(pkg.json): add some keywords

These are useful metadata, definitely in Yarn

* fix my dumb mistake

* add instantsearch

--- a/packages/react-instantsearch/package.json
+++ b/packages/react-instantsearch/package.json
@@ -7,6 +7,15 @@
   "main": "index.js",
   "module": "es/index.js",
   "description": "⚡ Lightning-fast search for React and React Native apps, by Algolia",
+  "keywords": [
+    "react",
+    "search",
+    "fast",
+    "algolia",
+    "instantsearch",
+    "components",
+    "react-native"
+  ],
   "version": "4.1.0-beta.5",
   "scripts": {
     "build": "./scripts/build.sh",
