test(recipes): add tests to be able to update deps more easliy (#272)
* chore(examples): update ris version when new release

* test(recipes): add tests to be able to update deps more easliy

* fix yarn lock

* fix tests

* add jest-cli

* refactor: change modal

* fix: lint

* fix: remove mentions test

* fix: lint

* debug

* debug

* try

* test

* test

* test

* revert

* polish

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint:fix": "eslint . --fix",
     "docs:doctoc": "doctoc --maxlevel 1 README.md",
     "test": "./scripts/test.sh",
+    "test:recipes": "./scripts/test:recipes.sh",
     "test:build": "NODE_ENV=production ./scripts/test:build.sh",
     "test:regressions": "webpack --config test/regressions/webpack.config.js && rm -rf test/screenshots && happo run && babel-node ./test/regressions/normalize.js",
     "argos": "argos upload test/screenshots --token $ARGOS_TOKEN || true",
@@ -121,7 +122,8 @@
     "node": "7.10.0"
   },
   "jest": {
-    "notify": false
+    "notify": false,
+    "testPathIgnorePatterns": ["/packages/react-instantsearch/examples"]
   },
   "license": "MIT",
   "author": {
