--- a/packages/react-instantsearch/examples/multi-index/package.json
+++ b/packages/react-instantsearch/examples/multi-index/package.json
@@ -1,9 +1,13 @@
 {
   "private": true,
   "devDependencies": {
-    "react-scripts": "1.0.10"
+    "react-scripts": "1.0.10",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-environment-jsdom-11.0.0": "^20.0.9",
+    "react-test-renderer": "^15.6.1"
   },
   "dependencies": {
+
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -11,8 +15,15 @@
     "react-instantsearch-theme-algolia": "4.1.0-beta.5"
   },
   "scripts": {
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "test": "jest"
   },
-  "main": "index.js",
+  "jest": {
+    "notify": false,
+    "testEnvironment": "jest-environment-jsdom-11.0.0",
+    "moduleNameMapper": {
+      "\\.(css)$": "identity-obj-proxy"
+    }
+  },
   "license": "MIT"
 }
