--- a/packages/react-instantsearch/examples/react-router-v3/package.json
+++ b/packages/react-instantsearch/examples/react-router-v3/package.json
@@ -1,7 +1,10 @@
 {
   "private": true,
   "devDependencies": {
-    "react-scripts": "1.0.10"
+    "identity-obj-proxy": "^3.0.0",
+    "jest-environment-jsdom-11.0.0": "^20.0.9",
+    "react-scripts": "1.0.10",
+    "react-test-renderer": "^15.6.1"
   },
   "dependencies": {
     "lodash": "^4.17.4",
@@ -14,7 +17,15 @@
     "react-router": "^3.0.5"
   },
   "scripts": {
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "test": "jest"
+  },
+  "jest": {
+    "notify": false,
+    "testEnvironment": "jest-environment-jsdom-11.0.0",
+    "moduleNameMapper": {
+      "\\.(css)$": "identity-obj-proxy"
+    }
   },
   "main": "index.js",
   "license": "MIT"
