--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "version": "4.1.0-beta.5",
+  "version": "4.1.0",
   "scripts": {
     "boot": "./scripts/boot.sh",
     "upgrade-deps": "./scripts/upgrade-deps.sh",
@@ -123,7 +123,9 @@
   },
   "jest": {
     "notify": false,
-    "testPathIgnorePatterns": ["/packages/react-instantsearch/examples"]
+    "testPathIgnorePatterns": [
+      "/packages/react-instantsearch/examples"
+    ]
   },
   "license": "MIT",
   "author": {
