--- a/packages/react-instantsearch/package.json
+++ b/packages/react-instantsearch/package.json
@@ -16,7 +16,7 @@
     "components",
     "react-native"
   ],
-  "version": "4.1.0-beta.5",
+  "version": "4.1.0",
   "scripts": {
     "build": "./scripts/build.sh",
     "build-and-publish": "./scripts/build-and-publish.sh"
