--- a/packages/react-instantsearch/examples/multi-index/package.json
+++ b/packages/react-instantsearch/examples/multi-index/package.json
@@ -1,18 +1,17 @@
 {
   "private": true,
   "devDependencies": {
-    "react-scripts": "1.0.11",
     "identity-obj-proxy": "3.0.0",
     "jest-environment-jsdom-11.0.0": "20.0.9",
+    "react-scripts": "1.0.11",
     "react-test-renderer": "15.6.1"
   },
   "dependencies": {
-
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-instantsearch": "4.1.0-beta.5",
-    "react-instantsearch-theme-algolia": "4.1.0-beta.5"
+    "react-instantsearch": "4.1.0",
+    "react-instantsearch-theme-algolia": "4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
