--- a/packages/react-instantsearch/examples/server-side-rendering/package.json
+++ b/packages/react-instantsearch/examples/server-side-rendering/package.json
@@ -19,8 +19,8 @@
     "extract-text-webpack-plugin": "3.0.0",
     "json-loader": "0.5.7",
     "node-sass": "4.5.3",
-    "sass-loader": "6.0.6",
     "react-test-renderer": "15.6.1",
+    "sass-loader": "6.0.6",
     "webpack": "3.5.5",
     "webpack-node-externals": "1.6.0"
   },
@@ -29,7 +29,7 @@
     "prop-types": "^15.5.10",
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
-    "react-instantsearch": "4.1.0-beta.5",
-    "react-instantsearch-theme-algolia": "4.1.0-beta.5"
+    "react-instantsearch": "4.1.0",
+    "react-instantsearch-theme-algolia": "4.1.0"
   }
 }
