--- a/renovate.json
+++ b/renovate.json
@@ -8,6 +8,5 @@
       "semanticPrefix": "chore(deps): "
     }
   ],
-  "ignoreDeps": ["jsdoc-parse", "react-native"],
-  "schedule": ["after 7pm on thursday"]
+  "ignoreDeps": ["jsdoc-parse", "react-native"]
 }
