--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: node_js
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.1.0
+  - export PATH=$HOME/.yarn/bin:$PATH
 before_script:
   - yarn boot
 branches:
