--- a/package.json
+++ b/package.json
@@ -126,7 +126,8 @@
     "webpack-hot-middleware": "2.19.1"
   },
   "engines": {
-    "node": "8.2.1"
+    "node": "8.5.0",
+    "yarn": "1.1.0"
   },
   "jest": {
     "notify": false,
