--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
     "boot": "./scripts/boot.sh",
     "upgrade-deps": "./scripts/upgrade-deps.sh",
     "changelog": "conventional-changelog --preset angular --output-unreleased",
-    "start": "NODE_ENV=development babel-node docgen/start.js & NODE_ENV=development yarn docs:storybook-start & wait",
-    "docs:build": "babel-node docgen/build.js && yarn docs:storybook-build-production",
-    "docs:deploy-production": "NODE_ENV=production yarn docs:build && babel-node scripts/gh-pages.js",
+    "start":
+      "NODE_ENV=development babel-node docgen/start.js & NODE_ENV=development yarn docs:storybook-start & wait",
+    "docs:build":
+      "babel-node docgen/build.js && yarn docs:storybook-build-production",
+    "docs:deploy-production":
+      "NODE_ENV=production yarn docs:build && babel-node scripts/gh-pages.js",
     "docs:build-preview": "./scripts/docs:build-preview.sh",
-    "docs:deploy-preview": "NODE_ENV=production yarn docs:build-preview && rm -f preview.zip && zip -r -9 preview.zip docs-production/ && netlify deploy && rm preview.zip",
+    "docs:deploy-preview":
+      "NODE_ENV=production yarn docs:build-preview && rm -f preview.zip && zip -r -9 preview.zip docs-production/ && netlify deploy && rm preview.zip",
     "release": "NODE_ENV=production ./scripts/release.sh",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -17,11 +21,14 @@
     "test": "./scripts/test.sh",
     "test:recipes": "./scripts/test:recipes.sh",
     "test:build": "NODE_ENV=production ./scripts/test:build.sh",
-    "test:regressions": "webpack --config test/regressions/webpack.config.js && rm -rf test/screenshots && happo run && babel-node ./test/regressions/normalize.js",
+    "test:regressions":
+      "webpack --config test/regressions/webpack.config.js && rm -rf test/screenshots && happo run && babel-node ./test/regressions/normalize.js",
     "argos": "argos upload test/screenshots --token $ARGOS_TOKEN || true",
     "dev": "jest --watch --bail",
-    "docs:storybook-start": "start-storybook -p 6006 -c ./storybook -s ./storybook/public",
-    "docs:storybook-build-production": "build-storybook -s ./storybook/public -o docs-production/react-instantsearch/storybook -c ./storybook"
+    "docs:storybook-start":
+      "start-storybook -p 6006 -c ./storybook -s ./storybook/public",
+    "docs:storybook-build-production":
+      "build-storybook -s ./storybook/public -o docs-production/react-instantsearch/storybook -c ./storybook"
   },
   "devDependencies": {
     "@storybook/addon-actions": "3.2.11",
@@ -54,6 +61,8 @@
     "conventional-changelog-cli": "1.3.3",
     "css-loader": "0.28.7",
     "doctoc": "1.3.0",
+    "enzyme": "3.0.0",
+    "enzyme-adapter-react-15": "1.0.0",
     "escape-html": "1.0.3",
     "eslint": "4.7.2",
     "eslint-config-algolia": "12.0.0",
@@ -124,9 +133,7 @@
   },
   "jest": {
     "notify": false,
-    "testPathIgnorePatterns": [
-      "/packages/react-instantsearch/examples"
-    ]
+    "testPathIgnorePatterns": ["/packages/react-instantsearch/examples"]
   },
   "license": "MIT",
   "author": {
