--- a/packages/react-instantsearch/package.json
+++ b/packages/react-instantsearch/package.json
@@ -6,8 +6,7 @@
   },
   "main": "index.js",
   "module": "es/index.js",
-  "description":
-    "⚡ Lightning-fast search for React and React Native apps, by Algolia",
+  "description": "⚡ Lightning-fast search for React and React Native apps, by Algolia",
   "keywords": [
     "react",
     "search",
@@ -17,7 +16,7 @@
     "components",
     "react-native"
   ],
-  "version": "4.1.2",
+  "version": "4.1.3",
   "scripts": {
     "build": "./scripts/build.sh",
     "build-and-publish": "./scripts/build-and-publish.sh"
