--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "css-loader": "0.28.7",
     "doctoc": "1.3.0",
     "enzyme": "3.1.0",
-    "enzyme-adapter-react-15": "1.0.1",
+    "enzyme-adapter-react-16": "1.0.1",
     "escape-html": "1.0.3",
     "eslint": "4.7.2",
     "eslint-config-algolia": "12.0.0",
@@ -108,12 +108,12 @@
     "prop-types": "15.6.0",
     "pug": "2.0.0-rc.4",
     "qs": "6.5.1",
-    "react": "15.6.2",
+    "react": "16.0.0",
     "react-addons-test-utils": "15.6.2",
     "react-autosuggest": "9.3.2",
-    "react-dom": "15.6.2",
+    "react-dom": "16.0.0",
     "react-hot-loader": "3.0.0-beta.7",
-    "react-tap-event-plugin": "2.0.1",
+    "react-tap-event-plugin": "3.0.2",
     "recursive-readdir": "2.2.1",
     "replace-in-file": "2.6.4",
     "rheostat": "2.1.1",
@@ -133,7 +133,8 @@
   },
   "jest": {
     "notify": false,
-    "testPathIgnorePatterns": ["/packages/react-instantsearch/examples"]
+    "testPathIgnorePatterns": ["/packages/react-instantsearch/examples"],
+    "setupFiles": ["./shim.js"]
   },
   "license": "MIT",
   "author": {
