--- a/packages/react-instantsearch/examples/next-app/package.json
+++ b/packages/react-instantsearch/examples/next-app/package.json
@@ -7,17 +7,20 @@
     "test": "jest"
   },
   "devDependencies": {
-    "react-test-renderer": "15.6.2"
+    "react-test-renderer": "16.0.0"
   },
   "dependencies": {
-    "css-loader": "^0.28.4",
-    "next": "^3.0.1",
-    "prop-types": "^15.5.10",
-    "qs": "^6.5.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "css-loader": "0.28.4",
+    "next": "4.0.0",
+    "prop-types": "15.5.10",
+    "qs": "6.5.0",
+    "react": "16.0.0",
+    "react-dom": "16.0.0",
     "react-instantsearch": "4.1.3",
     "react-instantsearch-theme-algolia": "4.1.3",
-    "style-loader": "^0.19.0"
+    "style-loader": "0.19.0"
+  },
+  "jest": {
+    "setupFiles": ["../../../../shim.js"]
   }
 }
