--- a/packages/react-instantsearch/examples/react-native/package.json
+++ b/packages/react-instantsearch/examples/react-native/package.json
@@ -22,23 +22,23 @@
     "preset": "jest-expo",
     "transformIgnorePatterns": [
       "node_modules/(?!react|@expo|expo|@ptomasroos|react-native-router-flux|mobx-react)"
-    ]
+    ],
+    "setupFiles": ["../../../../shim.js"]
   },
   "dependencies": {
     "@ptomasroos/react-native-multi-slider": "^0.0.11",
-    "expo": "^21.0.0",
-    "lodash": "^4.17.4",
-    "native-base": "^2.1.3",
-    "prop-types": "^15.5.8",
-    "react": "16.0.0-rc.3",
-    "react-dom": "16.0.0-rc.3",
+    "expo": "21.0.2",
+    "lodash": "4.17.4",
+    "native-base": "2.3.2",
+    "prop-types": "15.5.8",
+    "react": "16.0.0",
+    "react-dom": "16.0.0",
     "react-instantsearch": "4.1.3",
     "react-instantsearch-theme-algolia": "4.1.3",
-    "react-native": "^0.47.2",
-    "react-native-material-dropdown": "^0.5.0",
-    "react-native-modal-dropdown": "^0.4.4",
-    "react-native-router-flux": "^4.0.0-beta.15",
-    "react-native-star-rating": "^1.0.8",
-    "react-native-vector-icons": "^4.3.0"
+    "react-native": "0.48.4",
+    "react-native-modal-dropdown": "0.5.0",
+    "react-native-router-flux": "4.0.0-beta.15",
+    "react-native-star-rating": "1.0.8",
+    "react-native-vector-icons": "4.3.0"
   }
 }
