--- a/packages/react-instantsearch/examples/server-side-rendering/package.json
+++ b/packages/react-instantsearch/examples/server-side-rendering/package.json
@@ -8,7 +8,7 @@
     "test": "jest"
   },
   "devDependencies": {
-    "babel-core": "6.26.0",
+    "babel-core": "7.0.0-beta.2",
     "babel-loader": "7.1.2",
     "babel-plugin-transform-async-to-generator": "6.24.1",
     "babel-polyfill": "6.26.0",
@@ -19,16 +19,19 @@
     "extract-text-webpack-plugin": "3.0.1",
     "json-loader": "0.5.7",
     "node-sass": "4.5.3",
-    "react-test-renderer": "15.6.2",
+    "react-test-renderer": "16.0.0",
     "sass-loader": "6.0.6",
     "webpack": "3.6.0",
     "webpack-node-externals": "1.6.0"
   },
+  "jest": {
+    "setupFiles": ["../../../../shim.js"]
+  },
   "dependencies": {
-    "express": "^4.14.0",
-    "prop-types": "^15.5.10",
-    "react": "^15.2.0",
-    "react-dom": "^15.2.0",
+    "express": "4.14.0",
+    "prop-types": "15.5.10",
+    "react": "16.0.0",
+    "react-dom": "16.0.0",
     "react-instantsearch": "4.1.3",
     "react-instantsearch-theme-algolia": "4.1.3"
   }
