chore(renovate): tune configuration (#466)

--- a/packages/react-instantsearch/examples/react-router-v3/package.json
+++ b/packages/react-instantsearch/examples/react-router-v3/package.json
@@ -29,5 +29,8 @@
     "setupFiles": ["../../../../shim.js"]
   },
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "renovate": {
+    "ignoreDeps": ["react-router"]
+  }
 }
