fix(Range): handle float, allow reset and respect boundaries
* feat(RangeInput): handle min / max validation on input

* refactor(RangeInput): remove useless stop propagation call

* chore(deps): add enzyme to JSON

* refactor(RangeInput): handle min / max as placeholder + validation on input

* refactor(RangeInput): always send values to refine

* refactor(RangeInput): remove unused import

* chore(stories): sort RangeInput stories

* refactor(connectRange): handle boundaries on refine

* refactor(connectRange): throw an error when default refinement is out of range

* fix(RangeInput): update placeholder color same as SeachBox

* refactor(RangeInput): throw error on refine earlier

* feat(RangeInput): handle precision with step

* feat(connectRange): add precision props

* refactor(connectRange): compute range with precision

* refactor(connectRange): compute current refinement from range

* refactor(connectRange): avoid useless variable and simplify test

* chore(stories): add RangeInput story for precision

* chore: add enzyme to json to serializer

* refactor: remove unused variable

* chore(stories): remove min/max from RangeInput precision story

* fix(RangeInput): display range & value only when canRefine is true

* docs(RangeInput): add precision option

* fix(Stories): add missing precision props to RangeInput playground

* refactor(connectRange): extract computation of next value

* feat(connectRange): handle range with precision always with the same behaviour

* refactor(connectRange): use 2 as default precision

* docs(RangeInput): use 2 as default precision

* refactor(stories): update story with precision of 0

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "doctoc": "1.3.0",
     "enzyme": "3.1.0",
     "enzyme-adapter-react-16": "1.0.2",
+    "enzyme-to-json": "3.1.2",
     "escape-html": "1.0.3",
     "eslint": "4.9.0",
     "eslint-config-algolia": "12.0.0",
@@ -131,7 +132,8 @@
     ],
     "setupFiles": [
       "./shim.js"
-    ]
+    ],
+    "snapshotSerializers": ["enzyme-to-json/serializer"]
   },
   "license": "MIT",
   "author": {
