docs(storybook): add widgets usage
* docs(storybook): add jsx addon

* docs(storybook): add method to display correct component names

* docs(storybook): add jsx usage to the stories

* docs(storybook): update yarn.lock

* docs(storybook): modify webpack config to fix build-storybook fail

See https://github.com/storybooks/storybook/issues/1774

* docs(storybook): filter out unnecessary props

* docs(storybook): updates after reviews on PR

--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "rheostat": "2.1.1",
     "sass-loader": "6.0.6",
     "stat-mode": "0.2.2",
+    "storybook-addon-jsx": "5.0.0",
     "string": "3.3.3",
     "style-loader": "0.19.0",
     "uglify-js": "3.0.25",
