Fix server side rendering example (#575)
* chore(server-side-rendering): revert babel to 6.26.0 because the build fail

* chore(server-side-rendering): remove all useless dependency related to styling

* fix(server-side-rendering): update render to hydrate in React 16

* chore: ignore build folder

* feat(examples): add build command when missing

* feat(test:recipes): build the example before test

--- a/packages/react-instantsearch/examples/autocomplete/package.json
+++ b/packages/react-instantsearch/examples/autocomplete/package.json
@@ -18,6 +18,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "jest"
   },
   "jest": {
