--- a/packages/react-instantsearch/examples/geo-search/package.json
+++ b/packages/react-instantsearch/examples/geo-search/package.json
@@ -17,6 +17,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "jest"
   },
   "jest": {
