--- a/packages/react-instantsearch/examples/react-native/package.json
+++ b/packages/react-instantsearch/examples/react-native/package.json
@@ -13,6 +13,7 @@
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
     "start": "react-native-scripts start",
+    "build": "echo \"Error: no build specified\" && exit 0",
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
