--- a/packages/react-instantsearch/examples/multi-index/package.json
+++ b/packages/react-instantsearch/examples/multi-index/package.json
@@ -15,6 +15,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "jest"
   },
   "jest": {
