--- a/packages/react-instantsearch/examples/server-side-rendering/package.json
+++ b/packages/react-instantsearch/examples/server-side-rendering/package.json
@@ -8,31 +8,28 @@
     "test": "jest"
   },
   "devDependencies": {
-    "babel-core": "7.0.0-beta.3",
+    "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
     "babel-plugin-transform-async-to-generator": "6.24.1",
     "babel-polyfill": "6.26.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
-    "css-loader": "0.28.7",
-    "extract-text-webpack-plugin": "3.0.1",
     "json-loader": "0.5.7",
-    "node-sass": "4.6.0",
     "react-test-renderer": "16.0.0",
-    "sass-loader": "6.0.6",
     "webpack": "3.8.1",
     "webpack-node-externals": "1.6.0"
   },
   "jest": {
-    "setupFiles": ["../../../../shim.js"]
+    "setupFiles": [
+      "../../../../shim.js"
+    ]
   },
   "dependencies": {
     "express": "4.16.2",
     "prop-types": "15.5.10",
     "react": "16.0.0",
     "react-dom": "16.0.0",
-    "react-instantsearch": "4.2.0",
-    "react-instantsearch-theme-algolia": "4.2.0"
+    "react-instantsearch": "4.2.0"
   }
 }
