Update happo-* to v5 (#578)
* chore: update happo-* to 5.0.0

* chore(travis): update FF to 56.0

--- a/package.json
+++ b/package.json
@@ -70,9 +70,9 @@
     "gh-pages": "1.0.0",
     "glob": "7.1.2",
     "google-map-react": "0.25.0",
-    "happo": "5.0.0-rc.3",
-    "happo-core": "5.0.0-rc.2",
-    "happo-target-firefox": "5.0.0-rc.8",
+    "happo": "5.0.0",
+    "happo-core": "5.0.0",
+    "happo-target-firefox": "5.0.0",
     "happypack": "4.0.0",
     "hasha": "3.0.0",
     "jest-cli": "21.2.1",
